--- a/index.html
+++ b/index.html
@@ -1,118 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My GitHub SEO Page</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="This is a sample GitHub Pages site optimized for SEO." />
-  <meta name="keywords" content="GitHub Pages, SEO, HTML, CSS, Open Source" />
-  <meta name="author" content="Your Name" />
-  <link rel="canonical" href="https://yourusername.github.io/" />
-
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="My GitHub SEO Page" />
-  <meta property="og:description" content="A simple website hosted on GitHub Pages with SEO best practices." />
-  <meta property="og:url" content="https://yourusername.github.io/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=GitHub+SEO+Page" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="My GitHub SEO Page" />
-  <meta name="twitter:description" content="A simple GitHub Pages website optimized for SEO." />
-  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=GitHub+SEO+Page" />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Intro Page</title>
   <style>
+    /* General Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: system-ui, sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      background-color: #fff;
-      color: #333;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
     }
 
-    header, footer {
-      background: #f5f5f5;
-      padding: 1em;
+    .intro-container {
       text-align: center;
+      max-width: 600px;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     }
 
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 20px;
     }
 
-    nav ul li {
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    .cta-button {
       display: inline-block;
-      margin: 0 1em;
-    }
-
-    a {
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #ff7f50;
+      border: none;
+      border-radius: 5px;
       text-decoration: none;
-      color: #0077cc;
+      transition: background 0.3s ease;
     }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 2em;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    h1, h2 {
-      color: #222;
-    }
-
-    img.responsive {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin-top: 1em;
+    .cta-button:hover {
+      background: #ff4500;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Welcome to My GitHub Pages Site</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>This site showcases my open source work and personal projects hosted on GitHub.</p>
-      <img src="https://via.placeholder.com/800x400.png?text=About+Image" alt="About Me Image" class="responsive" />
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1</a></li>
-        <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2</a></li>
-      </ul>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>You can reach me via <a href="mailto:your@email.com">email</a>.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Your Name</p>
-  </footer>
+  <div class="intro-container">
+    <h1>Welcome to Our Website!</h1>
+    <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*dDNpLKu_oTLzStsDTnkJ-g.png" alt="Website Illustration" />
+    <p>We’re thrilled to have you here. Explore and discover amazing content tailored just for you.</p>
+    <a href="#explore" class="cta-button">Get Started</a>
+  </div>
 </body>
 </html>
